--- a/views/record_health.hbs
+++ b/views/record_health.hbs
@@ -97,7 +97,7 @@
     </div>
 
     <!-- Column 2 -->
-    <!-- Grid container that stores inputs-->
+    <!-- Grid container that stores text inputs (measurement and comments)-->
     <div class="grid-inputs">
         <h2 class="data-title"><label for="measurement">Measurement</label></h2><br>
         <input type="text" id="measurement" name="measurement" placeholder="Enter number" required><br>
