update patient dashboard message window

--- a/views/patient_dashboard.hbs
+++ b/views/patient_dashboard.hbs
@@ -57,8 +57,8 @@
         <button class="button01 white">Dose of insulin</button>
 
         <button class="button02">
-            <h2>New message!</h2>
-            <p>Great job!</p>
+            <h2>Recent Messages</h2>
+            <p>No messages.</p>
         </button>
         <button class="button01 white">Blood glucose levels</button>
     </div>
