--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -681,7 +681,7 @@ img {
     font-weight: 700;
 }
 .red-highlight {
-    border: 3px solid red;
+    border: 5px solid rgba(255,0,0,0.5);
 }
 
 /* Login Page Styles*/
