QoL: Clicking the site logo now takes you to either the patient dash or the clinician dash depending on your role

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,7 +22,7 @@
             <div class="bar"></div>
         </label>
 
-        <a href="../about_diabetes" class="flexbox-navbar-logo"><img src="../assets/logo_navbar.png" width="175px"
+        <a href="{{logoURL}}" class="flexbox-navbar-logo"><img src="../assets/logo_navbar.png" width="175px"
                 height="85px" alt="Diabetes@Home Logo"></a>
 
         <img class="nav-msg-icon" src="../assets/navbar_message_icon.png">
