slight improvement to the appearance of the login page on mobile devices

--- a/views/login_page.hbs
+++ b/views/login_page.hbs
@@ -17,7 +17,7 @@
                 </div>
                 <button class="login_button">LOGIN</button>
 
-                <a href="clinician_dashboard" class="login_button" style="background-color: red;">DEBUG***ACCESS CLINICIAN DASHBOARD***</a>
+                <a href="clinician_dashboard" class="login_button" style="background-color: red;">DEBUG: Access Clinician Dashboard</a>
                 
                 <div class="acc-creation-text">
                      <div>Don't have an account? <a href="#">Create an Account.</a></div> 
