--- a/views/record_health.hbs
+++ b/views/record_health.hbs
@@ -37,7 +37,7 @@
 
 
 
-            <!-- Sahil note: The blocks of code below is the same the code above but now each radio option is a grid container. -->
+            <!-- Sahil note: The blocks of code below are the same the code above but now each radio option is a grid container. -->
             <!-- This allows us to make things even more responsive (e.g. circle checkbox doesn't disappear when the screen gets too small) -->
             
             <!-- The 'radioContainer' is a grid with 1 row and 3 columns. -->
