Modified CSS, alligned record_health UI

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -725,7 +725,7 @@ p {
 }
 
 /* Full-width inputs */
-input[type=text], input[type=password] {
+input[id=email], input[id=psw] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -987,7 +987,6 @@ input[type=text], input[type=password] {
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 2fr 1fr;
     grid-column-gap: 100px;
     align-content: center;
     margin-left: auto;
@@ -1009,7 +1008,7 @@ input[type=text], input[type=password] {
         margin-bottom:20%
     }
     .submit{
-        margin-bottom: 5%;
+        margin-bottom: 7%;
     }   
 }
 
@@ -1028,14 +1027,9 @@ input[name= "Selector"]{
      min-height: 20px;
 }
 
-/* input[type="radio"]{s
-    margin-left: 95px;
-} */
-
 .radiocircle {
     min-width: 64px;
 }
-
 
 .radioicon {
     display: flex;
@@ -1075,8 +1069,7 @@ input[name= "Selector"]{
     align-items: center;
 }
 
-
-
+/* 
 .radio{
     margin-bottom: 4%;
     color: white;
@@ -1133,11 +1126,11 @@ input[name= "Selector"]{
     height: 75px;
     display: flex;
     flex-direction: row;
-}
+} */
 
 /* Measurement section */
 
-input[id='measurement']{
+input[id=measurement] {
     background-color: #FFFFFF;
     filter: drop-shadow(1px 1px 3px #d4d4d4);
     border-style: solid;
@@ -1148,40 +1141,40 @@ input[id='measurement']{
     width: 100%;
     height: 75px;
     margin-bottom: 2%;
-    margin-top: -20px;
 }
 
 input[placeholder='Enter number'] {
     font-family: 'poppins', sans-serif;
     font-size: 18px;
-    color: #8a8a8a;
     padding-left: 5%;
 }
 
 /* Additional Comments section */
-input[id='comments']{
+.comments {
     background-color: #FFFFFF;
     filter: drop-shadow(1px 1px 3px #d4d4d4);
+    font-size: 18px;
+    font-weight: 600;
     border-style: solid;
     border-color: #E8E8E8;
     border-width: thin;
     border-radius: 20px;
+    padding-left: 5%;
+    padding-top: 5%;
     outline: none;
     width: 100%;
-    height: 200px;
-    margin-top: -20px;
+    min-height: 200px;
+    height: 45%;
 }
 
-input[placeholder='Type in comments'] {
+textarea::placeholder {
     font-family: 'poppins', sans-serif;
     font-size: 18px;
-    color: #8a8a8a;
-    padding-left: 5%;
-    padding-bottom: 30%;
+    font-weight: 600;
 }
 
 /* submit button */
-.submit{
+.submit {
     text-align: center;
     display: block;
     font-size: 30px;
@@ -1189,15 +1182,13 @@ input[placeholder='Type in comments'] {
     color: white;
     background-color: #7D92DB;
     border-radius: 20px;
-    border-style: none;
-    width: 250px;
+    width: 230px;
     min-height: 55px;
     padding: 0%;
     align-content: center;
     justify-items: center;
     margin-left: auto;
     margin-right: auto;
-    margin-top: -10%;
-    margin-bottom: 7%;
+    margin-bottom: 50px;
 }
 
