--- a/views/record_health.hbs
+++ b/views/record_health.hbs
@@ -3,14 +3,14 @@
 <h1 class="heading">Record Data</h1>
 <br>
 
+<form method="POST" action="/post_values">
 <!-- container that stores timestamps and data inputs (e.g. record health)-->
-<div class="grid-container">
-    <!-- Column 1 - radio button form-->
-    <!-- Form should send selection - need to modify this code once we have databased sorted -->
-    <div class="grid-timestamp">
-        <!-- saw this part online but not sure if relevant to us 'form action'-->
-        <form method="POST" action="/post_values">
-            <h2 class="data-title">Timestamp</h2>
+    <div class="grid-container">
+        <!-- Column 1 - radio button form-->
+        <!-- Form should send selection - need to modify this code once we have databased sorted -->
+        <div class="grid-timestamp">
+                <!-- saw this part online but not sure if relevant to us 'form action'-->
+            <h2 class="data-title">Timestamp</h2><br>
 
             <!-- Old code commented out. Kept as a reference for other group mates -->
             {{!-- <div class="radio blue">
@@ -36,13 +36,12 @@
             </div> --}}
 
 
-
             <!-- Sahil note: The blocks of code below are the same the code above but now each radio option is a grid container. -->
             <!-- This allows us to make things even more responsive (e.g. circle checkbox doesn't disappear when the screen gets too small) -->
             
             <!-- The 'radioContainer' is a grid with 1 row and 3 columns. -->
             <div class="radioContainer blue">
-                <!-- The first column is an icon -->
+                        <!-- The first column is an icon -->
                 <div class="radioicon">
                     <img src="../assets/blood glucose.png" class="timestamp-icon">
                 </div>
@@ -94,22 +93,17 @@
                     <input name="Selector" class="radiocircle" id="exercise" type="radio"></input>
                 </div>
             </div>
+        </div>
+        <!-- Column 2 -->
+        <!-- Grid container that stores text inputs (measurement and comments)-->
+        <div class="grid-inputs">
+            <h2 class="data-title"><label for="measurement">Measurement</label></h2><br>
+            <input type="text" id="measurement" name="measurement" placeholder="Enter number" required><br>
+
+            <h2 class="data-title"><label for="comment">Additional Comments</label></h2><br>
+            <textarea class="comments" type="text" id="comment" name="comment" placeholder="Type in comments"></textarea>
+        </div>
     </div>
-
-    <!-- Column 2 -->
-    <!-- Grid container that stores text inputs (measurement and comments)-->
-    <div class="grid-inputs">
-        <h2 class="data-title"><label for="measurement">Measurement</label></h2><br>
-        <input type="text" id="measurement" name="measurement" placeholder="Enter number" required><br>
-
-        <h2 class="data-title"><label for="comment">Additional Comments</label></h2><br>
-        <input type="text" id="comment" name="comment" placeholder="Type in comments">
-    </div>
-
-</div>
-<!-- Submit Button -->
-
-<input class="submit" type="submit" value="Submit">
-
+        <!-- Submit Button -->
+        <input class="button01 submit" type="submit" value="Submit">
 </form>
-</div>
