--- a/views/register_page.hbs
+++ b/views/register_page.hbs
@@ -2,24 +2,22 @@
 <div class="background">
     <div class="flexbox-form-container">
         <form class="loginform" action="/login" method="post">
-                <h2 class="login_heading">LOGIN</h2>
+                <h2 class="login_heading">REGISTER</h2>
             <div class="login_container">
                 <label for="uname"><b>Username</b></label>
                 <input id="email" type="text" placeholder="Enter Email" name="uname">
 
                 <label for="psw"><b>Password</b></label>
                 <input id="psw" type="password" placeholder="Enter Password" name="psw">
-                <div class="psw">
-                   <label>
-                        <input type="checkbox" checked="checked" name="remember"> Remember me
-                    </label>
-                    <div><a href="#">Forgot password?</a></div> 
-                </div>
-                <button class="login_button">LOGIN</button>
-                
+                <label for="psw"><b>Confirm Password</b></label>
+                <input id="psw" type="password" placeholder="ReEnter Password" name="psw">
+                <br>
+                <button class="login_button">REGISTER</button>
+
                 <div class="acc-creation-text">
-                     <div>Don't have an account? <a href="register_page">Create an Account.</a></div> 
+                     <div>Already have an account? <a href="login_page">Login.</a></div> 
                 </div> 
+
             </div>   
         </form>
     </div>
