--- a/views/login_page.hbs
+++ b/views/login_page.hbs
@@ -5,10 +5,10 @@
                 <h2 class="login_heading">LOGIN</h2>
             <div class="login_container">
                 <label for="uname"><b>Username</b></label>
-                <input id="email" type="text" placeholder="Enter Email" name="uname">
+                <input id="username" type="text" placeholder="Enter Email" name="username">
 
                 <label for="psw"><b>Password</b></label>
-                <input id="psw" type="password" placeholder="Enter Password" name="psw">
+                <input id="psw" type="password" placeholder="Enter Password" name="password">
                 <div class="psw">
                    <label>
                         <input type="checkbox" checked="checked" name="remember"> Remember me
