--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -24,7 +24,7 @@
 
         <a href="{{logoURL}}" class="flexbox-navbar-logo"><img src="../assets/logo_navbar.png" width="175px"
                 height="85px" alt="Diabetes@Home Logo"></a>
-
+        <p>Logged in as {{user._id}}. User secret is {{user.secret}}.</p>
         <img class="nav-msg-icon" src="../assets/navbar_message_icon.png">
         <img class="nav-profile-verticle-bar" src="../assets/navbar_line_verticle.png">
         <img class="nav-profile-icon" src="../assets/navbar_profile_icon.png">
