--- a/views/register_page.hbs
+++ b/views/register_page.hbs
@@ -1,16 +1,16 @@
 <body class="login_body">
 <div class="background">
     <div class="flexbox-form-container">
-        <form class="loginform" action="/login" method="post">
+        <form class="loginform" action="/register" method="post">
                 <h2 class="login_heading">REGISTER</h2>
             <div class="login_container">
-                <label for="uname"><b>Username</b></label>
-                <input id="email" type="text" placeholder="Enter Email" name="uname">
+                <label for="username"><b>Username</b></label>
+                <input id="username" type="text" placeholder="Enter Username" name="username">
 
                 <label for="psw"><b>Password</b></label>
-                <input id="psw" type="password" placeholder="Enter Password" name="psw">
+                <input id="psw" type="password" placeholder="Enter Password" name="password">
                 <label for="psw"><b>Confirm Password</b></label>
-                <input id="psw" type="password" placeholder="ReEnter Password" name="psw">
+                <input id="psw" type="password" placeholder="ReEnter Password" name="password2">
                 <br>
                 <button class="login_button">REGISTER</button>
 
