move register route to appRouter.js

--- a/views/layouts/main2.hbs
+++ b/views/layouts/main2.hbs
@@ -35,7 +35,7 @@
             </ul>
         </nav>
         <p>Logged in as {{user._id}}. User secret is {{user.secret}}.</p>
-        <a href="login_page"><button class="flexbox-navbar-button">Login</button></a>
+        <a href="login"><button class="flexbox-navbar-button">Login</button></a>
 
     </header>
 
