added authenticated tester in app.js

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -32,7 +32,7 @@
         <nav>
             <ul class="flexbox-navbar-profile">
                 <li class="nav-username">
-                    <p>{{userName}}</p>
+                    <p>{{user._id}}</p>
                 </li>
                 <li class="nav-userstatus">
                     <p>{{userRole}}</p>
