Dashboard shows username, change all instances of patient_dash to patient_dashboard

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -35,7 +35,7 @@
                     <p>{{userName}}</p>
                 </li>
                 <li class="nav-userstatus">
-                    <p>{{userRole}}</p>
+                    <p>{{role}}</p>
                     {{!-- <p>USER</p> --}}
                 </li>
             </ul>
