--- a/views/thankyou_page.hbs
+++ b/views/thankyou_page.hbs
@@ -7,7 +7,7 @@
 
             <div class="thankyou-buttons">
                 <a class="ty-button purple1" href="record_health">Add Another Entry</a>
-                <a class="ty-button purple2" href="patient_dash">Return to Dashboard</a>
+                <a class="ty-button purple2" href="patient_dashboard">Return to Dashboard</a>
             </div>
         </div>
     </div>
