working sessions with corrct username displayed

--- a/views/layouts/main2.hbs
+++ b/views/layouts/main2.hbs
@@ -34,7 +34,7 @@
                 </li>
             </ul>
         </nav>
-        <p>Logged in as {{user._id}}. User secret is {{user.secret}}.</p>
+        <p>Logged in as {{user.username}}. User secret is {{user.secret}}.</p>
         <a href="login_page"><button class="flexbox-navbar-button">Login</button></a>
 
     </header>
