Fixed Header not showing User

--- a/views/patient_dashboard.hbs
+++ b/views/patient_dashboard.hbs
@@ -10,7 +10,7 @@
 
         <!-- NOTE! These values are currently hardcoded and arbitrary (which is fine for this deliverable as per the spec) -->
         <!-- In the final submission these values need to be fetched from the database -->
-        <h2 class="username">{{username}}</h2>
+        <h2 class="username">{{user.username}}</h2>
         <p class="ranking">Ranking: 3rd</p>
     </div>
 
