Fixed clinician_dashboard not showing username

--- a/views/clinician_dashboard.hbs
+++ b/views/clinician_dashboard.hbs
@@ -31,7 +31,7 @@
                         <img src="assets/icon_profile.png" width="80" height="80">
                     </div>
                     <div>
-                        <div class="patient-name">{{this.name}}</div>
+                        <div class="patient-name">{{this.username}}</div>
                         <div class="patient-last-updated">Last Updated:</div>
                         <div class="patient-last-updated">{{this.dateTime}}</div>
                     </div>
