--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -1,3 +1,6 @@
+<!--      http://127.0.0.1:3000/clinician_dashboard/patient        -->
+
+
 <div id="patient-specifics-topbar">
     <h2>Clinical Record for USERNAME</h2>
 </div>
@@ -7,14 +10,41 @@
         <div class="patient-specifics-userbox-subgrid">
             <img class="patient-specifics-pfp" src="../assets/icon_profile.png" alt="Profile picture" width="150"
                 height="150">
-            
+
             <h2 class="patient-specifics-name">Kendrick Lamar</h2>
+
+            <button class="button03 purple2">Adjust Time-Series</button>
+            <button class="button03 purple1">Message</button>
         </div>
     </div>
 
     <div class="patient-specifics-table">
-        <p>Table</p>
+        <div class="grid-patient-category bold">Date/Time</div>
+        <div class="grid-patient-category bold">Data Type</div>
+        <div class="grid-patient-category bold">Value</div>
+        <div class="grid-patient-category bold">Comment</div>
+        <div class="grid-patient-data">-</div>
+        <div class="grid-patient-data">-</div>
+        <div class="grid-patient-data">-</div>
+        <div class="grid-patient-data">-</div>
+    </div>
 
+    <div class="patient-specifics-notes-container">
+        <h2>Clinical Notes for USERNAME</h2>
+        <p>TODO</p>
+        <p>TODO</p>
+        <p>TODO</p>
+    </div>
+</div>
 
+<div class="patient-specifics-overview-container">
+    <h2 class="patient-specifics-grid-title">Overview of USERNAME Health Data</h2>
+
+    <div class="patient-specifics-graph">
+        <h2>Statistical Graph</h2>
+    </div>
+
+    <div class="patient-specifics-month">
+        <h2>Monthly Overview</h2>
     </div>
 </div>
